# OpenCV_ImageEditor

./: .gitignore  CMakeLists.txt  README.md  image_operations.cpp  image_operations.h  start.cpp  test.cpp  utils.cpp  utils.h
